final fixes of Readme to submit project, added url of site

--- a/servers.yml
+++ b/servers.yml
@@ -1,6 +1,7 @@
 Description: >
-    Parvesh Mourya
-    About: servers config for config
+    Author: Parvesh Mourya
+    About: LoadBalancer, Elastic Group, LaunchConfiguration cofig is preset here.
+    DependsOn: network stack build using network.yml
 
 Parameters:
 
@@ -54,21 +55,26 @@ Resources:
         Type: AWS::AutoScaling::LaunchConfiguration
         Properties:
           UserData:
-          #!/bin/bash
-          apt-get update -y
-          apt-get install unzip awscli -y
-          apt-get install apache2 -y
-          systemctl start apache2.service
-          cd /var/www/html
-          aws s3 cp s3://udacity-devopsnd-p3/web-resume.zip . 
-          unzip -o udacity.zip
-        ImageId: ami-0470e33cd681b2476
-        SecurityGroups: !Ref WebServerSecGroup
-        InstanceType: t3.medium
-        BlockDeviceMappings:
-        - DeviceName: "/dev/sdk"
-          Ebs:
-            VolumeSize: '10'
+             Fn::Base64: !Sub |
+                #!/bin/bash
+                sudo su -
+                apt-get update -y
+                apt-get install apache2 -y
+                systemctl start apache2.service
+                apt-get install unzip -y
+                cd /var/www/html
+                wget https://udacity-devopsnd-p3.s3.ap-south-1.amazonaws.com/web-resume.zip 
+                unzip -o web-resume.zip
+                mv web-resume/* .
+                rm -rf web-resume*
+          ImageId: ami-0620d12a9cf777c87
+          SecurityGroups:
+            - Ref: WebServerSecGroup
+          InstanceType: t3.medium
+          BlockDeviceMappings:
+          - DeviceName: "/dev/sdk"
+            Ebs:
+              VolumeSize: '10'
     
     WebAppAutoScalingGroup:
         Type: AWS::AutoScaling::AutoScalingGroup
@@ -89,7 +95,8 @@ Resources:
           Subnets:
           - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
           - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
-          SecurityGroups: !Ref LBSecGroup
+          SecurityGroups:
+          - Ref: LBSecGroup
     
     WebAppLBListener:
         Type: AWS::ElasticLoadBalancingV2::Listener
