--- a/network.yml
+++ b/network.yml
@@ -164,7 +164,7 @@ Resources:
         Properties: 
             RouteTableId: !Ref PrivateRouteTable1
             DestinationCidrBlock: 0.0.0.0/0
-            GatewayId: !Ref NatGateway1
+            NatGatewayId: !Ref NatGateway1
 
     PrivateSubnet1RouteTableAssocation:
         Type: AWS::EC2::SubnetRouteTableAssociation
@@ -185,7 +185,7 @@ Resources:
         Properties:
             RouteTableId: !Ref PrivateRouteTable2
             DestinationCidrBlock: 0.0.0.0/0
-            GatewayId: !Ref NatGateway2
+            NatGatewayId: !Ref NatGateway2
 
     PrivateSubnet2RouteTableAssocation:
         Type: AWS::EC2::SubnetRouteTableAssociation
